adding a new file

--- a/newshid.html
+++ b/newshid.html
@@ -7,10 +7,9 @@
 </head>
 <body style="text-align: center;">
     <!--tHIS IS ONE EX-->
-    <iframe src="https://www.youtube.com/embed/qz0aGYrrlhU?si=CbMNSp85eMo3cvwZ" 
+    <iframe src="https://www.youtube.com/embed/rWky1japtJ8?si=7jXMrcUQJmZD2vbT" 
     width="300" height="200" 
     frameborder="0">
     </iframe>
-    
 </body>
 </html>
