adding new files

--- a/classtest.html
+++ b/classtest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test</title>
     <style>
         table,
         th,
@@ -17,6 +17,7 @@
              padding: 20px;
           }
      </style>
+     <link rel="icon" type="icon" href="pics/hand-grenade-152921_1280.png"
 </head>
 <body>
     <!--This is a Biography Page for Travis Scott-->
