--- a/images2.html
+++ b/images2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="icon" href="pics/hand-grenade-152921_1280.png"
 </head>
 <body style="text-align: center;">
     <!--This is an iframe-->
