addig new files

--- a/displayflex2.html
+++ b/displayflex2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display flex</title>
-    <link rel="stylesheet" href="displayflex.css">
+    <title>Display Flex with Animations</title>
+    <link rel="stylesheet" href="displayflex2.css">
     <script src="https://kit.fontawesome.com/cbcc065f34.js" crossorigin="anonymous"></script>
 </head>
 <body> 
 
-     <!--Designing my Nav bar-->
+    <!-- Navigation Bar -->
     <header class="joel">
         <nav class="philip">
             <h1>Online <span>Store</span></h1>
@@ -22,16 +22,15 @@
         </nav>
     </header>
 
-    <!--Designing my Home page here-->
+    <!-- Home Section -->
     <section class="sec">
         <div class="bene">
-            <h1>Welcome to my online store</h1>
-            <button type="submit">
-                submit
+            <h1 class="fade-in">Welcome to my online store</h1>
+            <button type="submit" class="animated-button">
+                Submit
             </button>
         </div>
     </section>
-    
     
 </body>
 </html>
