--- a/displayflex2.html
+++ b/displayflex2.html
@@ -6,6 +6,7 @@
     <title>Display Flex with Animations</title>
     <link rel="stylesheet" href="displayflex2.css">
     <script src="https://kit.fontawesome.com/cbcc065f34.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="icon" href="pics/twitter.webp">
 </head>
 <body> 
 
@@ -23,14 +24,52 @@
     </header>
 
     <!-- Home Section -->
-    <section class="sec">
-        <div class="bene">
-            <h1 class="fade-in">Welcome to my online store</h1>
-            <button type="submit" class="animated-button">
-                Submit
-            </button>
+     <main>
+        <section class="sec">
+            <div class="bene">
+                <h1 class="fade-in">Welcome to my online store</h1>
+                <button type="submit" class="animated-button">
+                    Submit
+                </button>
+            </div>
+        </section>
+     </main>
+
+
+    <!--Footer-->
+    <footer>
+        <div class="Footerchild">
+            <div class="Fchild1 box">
+                <h1 class="Fcopy">
+                    &copy;Copyright 2025
+                </h1>
+            </div>
+            <div class="Fchild2 box">
+                <ul>
+                    <li><a href="#">Diamond Necklace</a></li>
+                    <li><a href="#">Sneakers</a></li>
+                    <li><a href="#">Lingeries</a></li>
+                    <li><a href="#">Bras</a></li>
+                </ul>
+            </div>
+            <div class="Fchild3 box">
+                <ul>
+                   <li><a href="#">Delivery</a></li>
+                   <li><a href="">Services</a></li>
+                   <li><a href="#">Contact</a></li>
+                   <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="Fchild4 box">
+                <ul>
+                    <li><a href="#"><img src="pics/twitter.webp" alt="twitter"></a></li>
+                    <li><a href="#"><img src="pics/ig.webp" alt="instagram"></a></li>
+                    <li><a href="#"><img src="pics/facebook-64.webp" alt="facebook"></a></li>
+                    <li><a href="#"><img src="pics/Social-media_Whatsapp-64.webp" alt="Whatsapp"></a></li>
+                </ul>
+            </div>
         </div>
-    </section>
+    </footer>
     
 </body>
 </html>
