--- a/Favicons.html
+++ b/Favicons.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="icon" type="icon" href="pics/hand-grenade-152921_1280.png"
+    <link rel="icon" type="icon" href="pics/hand-grenade-152921_1280.png">
 </head>
 <body>
     <!--Using favicons-->
