adding new stuff

--- a/displayflex2.html
+++ b/displayflex2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Display Flex with Animations</title>
     <link rel="stylesheet" href="displayflex2.css">
+    <link rel="stylesheet" href="contact.css">
     <script src="https://kit.fontawesome.com/cbcc065f34.js" crossorigin="anonymous"></script>
     <link rel="icon" type="icon" href="pics/twitter.webp">
 </head>
@@ -15,8 +16,8 @@
         <nav class="philip">
             <h1>Online <span>Store</span></h1>
             <ol>
-                <li class="fa-solid fa-house"><a id="h" href="#">HOME</a></li>
-                <li class="fa-solid fa-phone"><a id="h" href="#">CONTACT</a></li>
+                <li class="fa-solid fa-house"><a id="h" href="displayflex2.html">HOME</a></li>
+                <li class="fa-solid fa-phone"><a id="h" href="contact.html">CONTACT</a></li>
                 <li class="fa-solid fa-handshake-angle"><a id="h" href="#">HELP</a></li>
                 <li class="fa-solid fa-address-card"><a id="h" href="#">ABOUT</a></li>
             </ol>
@@ -62,10 +63,10 @@
             </div>
             <div class="Fchild4 box">
                 <ul>
-                    <li><a href="#"><img src="pics/twitter.webp" alt="twitter"></a></li>
-                    <li><a href="#"><img src="pics/ig.webp" alt="instagram"></a></li>
-                    <li><a href="#"><img src="pics/facebook-64.webp" alt="facebook"></a></li>
-                    <li><a href="#"><img src="pics/Social-media_Whatsapp-64.webp" alt="Whatsapp"></a></li>
+                    <li><a href="#"><img src="pics/twitter.webp" width="20px"></a></li>
+                    <li><a href="#"><img src="pics/ig.webp" width="20px"></a></li>
+                    <li><a href="#"><img src="pics/facebook-64.webp" width="20px"></a></li>
+                    <li><a href="#"><img src="pics/Social-media_Whatsapp-64.webp" width="20px"></a></li>
                 </ul>
             </div>
         </div>
