adding new files

--- a/style1.html
+++ b/style1.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+    <!-- Gallery Section -->
+
     <section class="gallery">
         <img src="pics/oranges-and-orange-juice.webp" alt="Image 1">
         <img src="pics/2020-rolls-royce-wraith-104-1584549150.jpg" alt="Image 2">
