--- a/mtable.html
+++ b/mtable.html
@@ -15,7 +15,7 @@
       text-align: center;
     }
     th {
-      background-color: #f4b400;
+      background-color: #6af400;
       color: white;
     }
   </style>
